Resolve shifting right column layout
Resolve #298

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -276,6 +276,8 @@ $active-col: #eee;
   flex-direction: column;
 
   max-width: 920px;
+
+  overflow: auto;
 }
 
 .preview-info {
